--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
     <h1>Welcome to the Student Leave Management System</h1>
     <p>This will be the home page for students to log in and request leave.</p>
+    <p>
+        <a href="leave-request.html">Request Leave</a>
+    </p>
 </body>
 </html>
