--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <p>
         <a href="leave-request.html">Request Leave</a>
     </p>
+    <p>
+    <a href="leave-request.html">Request Leave</a>
+</p>
+<p>
+    <a href="view-requests.html">View Leave Requests</a>
+</p>
 </body>
 </html>
